# requestsloginsession

./: .coveragerc  .gitattributes  .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml  tests.yml
requestsloginsession/: __init__.py  requestsloginsession.py
tests/: test_requestsloginsession.py
