[metadata]
name = requestsloginsession
version = 0.6.1
author = DamonJavert
author_email = damonjavert@protonmail.com
description = Wrapper for requests that saves cookie data between script runs, typically for login sessions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/damonjavert/requestsloginsession
project_urls =
    Bug Tracker = https://github.com/damonjavert/requestsloginsession/issues
    repository = https://github.com/damonjavert/requestsloginsession
license = GPLv3
license_file = LICENSE.txt
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
[options]
packages =
    requestsloginsession
install_requires =
    requests>=2
    urllib3>=1.25
python_requires = >=3.8
zip_safe = no

